syntax = "proto3";

package userpb;

option go_package = "github.com/subliker/track-parcel-service/internal/pkg/gen/account/userpb";

import "google/protobuf/empty.proto";

service User {
    rpc Register (RegisterRequest) returns (google.protobuf.Empty);
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);
    rpc Auth(AuthRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
    int64 user_telegram_id = 1;
    string user_full_name = 2;
    string user_email = 3;
    optional string user_phone_number = 4;
}

message GetInfoRequest {
    int64 user_telegram_id = 1;
}

message GetInfoResponse {
    string user_full_name = 1;
    string user_email = 2;
    optional string user_phone_number = 3;
}

message AuthRequest {
    int64 user_telegram_id = 1;
}